--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<app-vanbar></app-vanbar>
-<app-usuarios [usuario]="user" *ngFor="let user of usuarios">
- 
-</app-usuarios>
+<router-outlet></router-outlet>
