--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,22 @@
-<p>tasks works!</p>
+<app-vanbar> </app-vanbar>
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <form [formGroup]="form" (ngSubmit)="enviarTarea()">
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Agregar tarea</label>
+                    <input formControlName="task" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">Escribe la tarea a agregar</div>
+                </div>
+                <div class="mb-3 form-check">
+                    <input formControlName="important" type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Importante</label>
+                </div>
+                <button class="btn btn-primary">Enviar</button>
+            </form>
+        </div>
+        <div class="col-8">
+            <app-task (delete)="deleteTask()" [tareas]="task" *ngFor="let task of tareas"></app-task>
+        </div>
+    </div>
+</div>
