--- a/src/app/vanbar/vanbar.component.html
+++ b/src/app/vanbar/vanbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand"  [routerLink]="['/']">
       <img src="https://icloudseven.com/wp-content/uploads/2019/04/logo-i-cloud-seven-color-200x58.png" />
     </a>
     <div class="d-flex">
